Revision history for {{$dist->name}}

{{$NEXT}}

0.004     2013-01-03 14:39:54 America/New_York
          numerous little improvements, including better broken-out Dumpers

0.003     2012-07-05 15:19:21 America/New_York
          replace YAML::XS with YAML; YAML::XS was sometimes causing
          unexplained "attempt to free unreferenced scalar" errors

0.002     2012-07-05 14:28:12 America/New_York
          add the caller_level option

0.001     2012-07-05 11:15:40 America/New_York
          first release