@@ -5,13 +5,11 @@ use parent 'Exception::Reporter::Summarizer';
 
 =head1 OVERVIEW
 
-This summarizer will accept any input and summarize it by dumping it to YAML.
+This summarizer will accept any input and summarize it by dumping it with the
+Exception::Reporter's dumper.
 
 I recommended that this summarizer is always in your list of summarizers,
 and always last.
-
-If a YAML dump can't be produced, the exception from YAML will be attached,
-along with the stringification of the dumpable value.
 
 =cut
 
